adding content and analytics

--- a/src/content/blog/what-is-tnr.mdx
+++ b/src/content/blog/what-is-tnr.mdx
@@ -10,11 +10,11 @@ description: >-
   win-win for everyone.
 pubDate: 2022-10-29T22:00:00.000Z
 tags:
-  - Winter
+  - TNR
+  - Trapping
   - Feral Cats
-  - Stray Cats
   - Community Cats
-  - Winter Cat Shelters
+  - Stray Cats
 title: 'TNR Meaning: Why trap, neuter, and release is important for feral cats'
 ---
 
